tests/samples/failing/06_assign_type_mismatch.mlang
let mut flag true;
set flag 1;